bug: overflow issue fixed on mobile view

--- a/src/Blog/BlogDetail.module.css
+++ b/src/Blog/BlogDetail.module.css
@@ -1,4 +1,4 @@
-.blogDetailContainer {
+.blogDetailContent {
   width: 80%;
   margin: auto;
   padding: 50px;
@@ -22,13 +22,20 @@
   width: 100%;
   background-color: transparent;
 }
+.blogDetailContainer {
+  margin-top: 25px;
+}
 
 @media only screen and (max-width: 768px) {
   .blogDetailContainer {
-    padding: 20px;
+    margin-top: 10px;
+  }
+  .blogDetailContent {
+    padding: 15px;
+    width: 90%;
   }
   .blogDetailHeading {
-    font-size: 40px;
+    font-size: 35px;
   }
   .blogDetailSubHeading {
     font-size: 20px;
