--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -50,6 +50,10 @@
 }
 
 @media screen and (max-width: 768px) {
+  .headerContainer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
   .headerLinks {
     display: none;
   }
