--- a/src/Home/Blogs/BlogCard.module.css
+++ b/src/Home/Blogs/BlogCard.module.css
@@ -46,7 +46,7 @@
     font-size: 40px;
   }
   .blogCardOverlay {
-    font-size: 40px;
+    font-size: 37px;
   }
   .blogCardSubHeading{
     font-size: 20px;
